# libSBOL

source/: CMakeLists.txt  validation.h
source/raptor/: CMakeLists.txt
