# Get the binaries for the dependencies
SET( LINK_DIR				${CMAKE_CURRENT_SOURCE_DIR}/lib )
IF (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    FIND_LIBRARY(raptor2
        NAME raptor2.lib
        PATHS ${LINK_DIR}
        )
	FIND_LIBRARY(xml2
		NAME libxml2_a.lib
		PATHS ${LINK_DIR}
		)
	FIND_LIBRARY(zlib
		NAME zlib.lib
		PATHS ${LINK_DIR}
		)
	FIND_LIBRARY(iconv
		NAME iconv_a.lib
		PATHS ${LINK_DIR}
		)
	MESSAGE(${raptor2})
	INSTALL(FILES ${LINK_DIR}/raptor2.lib DESTINATION lib)
	INSTALL(FILES ${LINK_DIR}/libxml2_a.lib DESTINATION lib)
	INSTALL(FILES ${LINK_DIR}/zlib.lib DESTINATION lib)
	INSTALL(FILES ${LINK_DIR}/iconv_a.lib DESTINATION lib)

	SET( RAPTOR_HEADER_DIR		${CMAKE_CURRENT_SOURCE_DIR}/include/raptor2 CACHE PATH "raptor path")
	FILE(GLOB RAPTOR_INCLUDE_DIRS 
		${RAPTOR_INCLUDE_DIRS}/*.h )
	MESSAGE(${RAPTOR_INCLUDE_DIRS})
	FILE(COPY ${RAPTOR_INCLUDE_DIRS} DESTINATION  ${HEADER_OUTPUT_PATH} )

ELSE ()
    FIND_PACKAGE (ZLIB REQUIRED)
    FIND_LIBRARY (ICONV_LIBRARY NAMES iconv)

    FIND_PATH (RAPTOR_INCLUDE_DIRS raptor2.h PATH_SUFFIXES raptor2)
    FIND_LIBRARY (RAPTOR2_LIBRARY NAMES raptor2)

    FIND_LIBRARY (XML_LIBRARY NAMES xml2)
ENDIF ()

# Copy the Raptor library headers over
